# Imavromage

./: .gitignore  CMakeLists.txt  meson.build
cli/: main.cpp  meson.build
include/ivmg/: ComputeContext.hpp  Formats.hpp  Image.hpp  formats.hpp  ivmg.hpp
include/ivmg/core/: features.hpp  formats.hpp  image.hpp
include/ivmg/filters/: Filter.hpp  GaussianBlur.hpp  filter.hpp  gaussian_blur.hpp
resources/: out.pam  out.pam.pam  out.ppm
src/: ComputeContext.cpp  Decoders.cpp  Decoders.hpp  Logger.hpp  common.hpp  convolution.cpp  ivmg.cpp  logger.hpp  macros.hpp  main.cpp  meson.build  utils.hpp
src/codecs/: Decoder.hpp  PNG.cpp  PNG.hpp  codecs.hpp  decoder.hpp  pam.cpp  pam.hpp  png.cpp  png.hpp  qoi.cpp  qoi.hpp
src/core/: common.hpp  features.cpp  image.cpp
src/decoders/: Decoders.cpp  Decoders.hpp
src/include/: utils.hpp
test/: main.cpp  meson.build
tests/: common.cpp  common.hpp  meson.build
tests/png/: main.cpp
